<resources>
    <string name="hello_blank_fragment">LO-LOL</string>
    <string name="app_name">MilkFlow</string>
    <string name="icon">icon</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">Update Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="update_new_password">Update new password</string>
    <string name="user_name">Name</string>
    <string name="business_name">Business Name</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="upi_id">UPI ID</string>
    <string name="registered_date">Registered Date</string>
    <string name="pin_code">Pin Code</string>
    <string name="do_you_want_to_receive_reminder_notifications_from_us">Do you want to receive reminder notifications from us?</string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="update_now">Update Now</string>
    <string name="check_you_detail_and_if_any_change_then_update_it">Check you detail and if any change then update it</string>
    <string name="set_prices">Set Prices</string>
    <string name="set_the_all_product_and_there_prices">Set The all Product and there prices</string>
    <string name="do_you_have_cow">Do you have Cow ?</string>
    <string name="do_you_have_buffalo">Do you have Buffalo ?</string>
    <string name="if_yes_then_set_the_price">If yes then set the price/litre (p/l).</string>
    <string name="buffalo_milk_enabled">Buffalo Milk Enabled</string>
    <string name="cow_milk_price">Cow Milk Price</string>
    <string name="buffalo_milk_price">Buffalo Milk Price</string>
    <string name="cow_milk_enabled">Cow Milk Enabled</string>
    <string name="account">Account</string>
    <string name="dashboard">Home</string>
    <string name="customer">Customer</string>
    <string name="register_customer">Add Customer</string>
    <string name="customer_list">Customer List</string>
    <string name="logout">Logout</string>
    <string name="my_customer">My Customer</string>
    <string name="products">Products</string>
    <string name="add_customer">Add Customer</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="milk_type">Milk Type</string>
    <string name="_milk_type">Milk Type : </string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cow_milk">Cow Milk</string>
    <string name="buffalo_milk">Buffalo Milk</string>
    <string name="add_milk">Add milk</string>
    <string name="morning_litter">Morning Litter</string>
    <string name="l">₹/L</string>
    <string name="evening_letter">Evening Letter</string>
    <string name="start_date">Start Date</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="both">Both</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="cash">Cash</string>
    <string name="upi">UPI</string>
    <string name="online">Online</string>
    <string name="wallet">Wallet</string>
    <string name="search">Search</string>
    <string name="paddings">Paddings</string>
    <string name="phone">Phone</string>
    <string name="vacation_mode">Vacation Mode</string>
    <string name="edit_products">Edit Products</string>
    <string name="edit_customer_profile">Edit Customer Profile</string>
    <string name="more_option">More Option</string>
    <string name="on_vacation">On Vacation</string>
    <string name="daily_sell">Daily Sell</string>
    <string name="profile">Profile</string>
    <string name="not_active">Not Active</string>
    <string name="active_date">"Active Date : "</string>
    <string name="call_the_customer">Call the Customer</string>
    <string name="padding_amount">Padding Amount</string>
    <string name="date_when_the_customer_received_the_product">Date when the Customer received the product</string>
    <string name="no_customers_found_start_by_adding_your_first_customer">No customers found.\n Start by adding your first customer!</string>
    <string name="no_matching_customers_found_please_refine_your_search">No matching customers found.\n Please refine your search.</string>
    <string name="refresh">Refresh</string>
    <string name="search_customer">Search Customer</string>
    <string name="litter">Litter</string>
    <string name="price">Price</string>
    <string name="total">Total (₹)</string>
    <string name="customer_register_instruction">Please enter &quot;0&quot; or don\'t add any value in any field where a customer does not order a specific type of milk (Cow or Buffalo) for either the morning or evening delivery.</string>
    <string name="check_your_customer">Check your customer</string>
    <string name="all_customer">All Customer</string>
    <string name="add_daily_sell">Add Daily Sell</string>
    <string name="_0">0</string>
    <string name="_0_0_Ltr">0.0 Ltr</string>
    <string name="app_update">App Update</string>
    <string name="check_update">Check Update</string>
    <string name="update"> Update</string>
    <string name="new_version">New Version:</string>
    <string name="check_for_update">Check for Update</string>
    <string name="current_version">Current Version:</string>
    <string name="description">Description</string>
    <string name="change_log">What\'s new</string>
    <string name="download_now">Download Now</string>
</resources>